--- a/src/components/comments/NewCommentForm.module.css
+++ b/src/components/comments/NewCommentForm.module.css
@@ -43,3 +43,8 @@
 .actions button {
   font-size: 1.25rem;
 }
+
+.control .input-error {
+  background-color: #f5b0b0;
+  border: 1px solid rgb(255, 0, 0);
+}
