--- a/src/components/comments/NewCommentForm.module.css
+++ b/src/components/comments/NewCommentForm.module.css
@@ -40,11 +40,17 @@
   outline-color: teal;
 }
 
-.actions button {
+.invalid textarea {
+  font: inherit;
+  padding: 0.35rem;
+  border-radius: 4px;
+  background-color: #f5b0b0;
+  border: 1px solid rgb(255, 0, 0);
+  display: block;
+  width: 100%;
   font-size: 1.25rem;
 }
 
-.control .input-error {
-  background-color: #f5b0b0;
-  border: 1px solid rgb(255, 0, 0);
+.actions button {
+  font-size: 1.25rem;
 }
